`AllowOverride all` included for testing of mod_rewrite

--- a/vanilla/apache.conf
+++ b/vanilla/apache.conf
@@ -4,6 +4,7 @@
     DocumentRoot /vanillaforum
 
     <Directory /vanillaforum>
+        AllowOverride all
         Require all granted
     </Directory>
 
