--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -7,4 +7,4 @@ scrape_configs:
   - job_name: 'node'
     scrape_interval: 5s
     target_groups:
-      - targets: ['172.22.22.22:9100']
+      - targets: ['localhost:9100']
