--- a/bacula/bacula-dir.conf
+++ b/bacula/bacula-dir.conf
@@ -43,7 +43,7 @@ JobDefs {
 # Define the main nightly save backup job
 #   By default, this job will back up to disk in /nonexistant/path/to/file/archive/dir
 Job {
-  Name = "BackupClient1"
+  Name = "BackupLocalFiles"
   JobDefs = "DefaultJob"
 }
 
@@ -75,14 +75,14 @@ Job {
 #  Only one such job is needed for all Jobs/Clients/Storage ...
 #
 Job {
-  Name = "RestoreFiles"
+  Name = "RestoreLocalFiles"
   Type = Restore
   Client=snackula-fd
-  FileSet="Full Set"                  
-  Storage = File                      
+  FileSet="Full Set"
+  Storage = File
   Pool = Default
   Messages = Standard
-  Where = /nonexistant/path/to/file/archive/dir/bacula-restores
+  Where = /bacula/restore
 }
 
 
@@ -93,7 +93,7 @@ FileSet {
     Options {
       signature = MD5
     }
-#    
+#
 #  Put your list of files here, preceded by 'File =', one per line
 #    or include an external list with:
 #
@@ -183,7 +183,7 @@ Client {
 # Definition of file storage device
 Storage {
   Name = File
-# Do not use "localhost" here    
+# Do not use "localhost" here
   Address = localhost                # N.B. Use a fully qualified name here
   SDPort = 9103
   Password = "-QFOR-nantfHtKw_uP5iDYPPC96lhBtgM"
@@ -195,7 +195,7 @@ Storage {
 
 # Definition of DDS tape storage device
 #Storage {
-#  Name = DDS-4    
+#  Name = DDS-4
 #  Do not use "localhost" here
 #  Address = localhost                # N.B. Use a fully qualified name here
 #  SDPort = 9103
@@ -232,7 +232,7 @@ Storage {
 Catalog {
   Name = MyCatalog
 # Uncomment the following line if you want the dbi driver
-# dbdriver = "dbi:postgresql"; dbaddress = 127.0.0.1; dbport =  
+# dbdriver = "dbi:postgresql"; dbaddress = 127.0.0.1; dbport =
   dbname = "bacula"; DB Address = ""; dbuser = "bacula"; dbpassword = "secretbaculapassword"
 }
 
@@ -247,14 +247,14 @@ Messages {
 #  What this does is, it sets the email address that emails would display
 #  in the FROM field, which is by default the same email as they're being
 #  sent to.  However, if you send email to more than one address, then
-#  you'll have to set the FROM address manually, to a single address. 
+#  you'll have to set the FROM address manually, to a single address.
 #  for example, a 'no-reply@mydomain.com', is better since that tends to
 #  tell (most) people that its coming from an automated source.
 
 #
   mailcommand = "/usr/sbin/bsmtp -h localhost -f \"\(Bacula\) \<%r\>\" -s \"Bacula: %t %e of %c %l\" %r"
   operatorcommand = "/usr/sbin/bsmtp -h localhost -f \"\(Bacula\) \<%r\>\" -s \"Bacula: Intervention needed for %j\" %r"
-  mail = root = all, !skipped            
+  mail = root = all, !skipped
   operator = root = mount
   console = all, !skipped, !saved
 #
@@ -272,7 +272,7 @@ Messages {
 Messages {
   Name = Daemon
   mailcommand = "/usr/sbin/bsmtp -h localhost -f \"\(Bacula\) \<%r\>\" -s \"Bacula daemon message\" %r"
-  mail = root = all, !skipped            
+  mail = root = all, !skipped
   console = all, !skipped, !saved
   append = "/var/log/bacula/bacula.log" = all, !skipped
 }
