Configured FileSet "Full Set"

--- a/bacula/bacula-dir.conf
+++ b/bacula/bacula-dir.conf
@@ -92,6 +92,7 @@ FileSet {
   Include {
     Options {
       signature = MD5
+      compression = GZIP
     }
 #
 #  Put your list of files here, preceded by 'File =', one per line
@@ -107,7 +108,7 @@ FileSet {
 #    directory to give a reasonable FileSet to backup to
 #    disk storage during initial testing.
 #
-    File = /usr/sbin
+    File = /
   }
 
 #
@@ -116,7 +117,7 @@ FileSet {
 #
   Exclude {
     File = /var/lib/bacula
-    File = /nonexistant/path/to/file/archive/dir
+    File = /bacula
     File = /proc
     File = /tmp
     File = /.journal
