Updated address with IP

--- a/bacula/bacula-dir.conf
+++ b/bacula/bacula-dir.conf
@@ -185,7 +185,7 @@ Client {
 Storage {
   Name = File
 # Do not use "localhost" here
-  Address = localhost                # N.B. Use a fully qualified name here
+  Address = 172.22.44.44                # N.B. Use a fully qualified name here
   SDPort = 9103
   Password = "-QFOR-nantfHtKw_uP5iDYPPC96lhBtgM"
   Device = FileStorage
