Added Label Format to File Pool

--- a/bacula/bacula-dir.conf
+++ b/bacula/bacula-dir.conf
@@ -291,6 +291,7 @@ Pool {
 Pool {
   Name = File
   Pool Type = Backup
+  Label Format = Local-
   Recycle = yes                       # Bacula can automatically recycle Volumes
   AutoPrune = yes                     # Prune expired volumes
   Volume Retention = 365 days         # one year
