Added basic apache2 installs and restart handler

--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -14,7 +14,16 @@
     - https
 
 # Apache
+- name: Install Apache
+  apt: name={{ item }} state=latest
+  with_items:
+    - apache2
+    - apache2utils
 
+- name: Enable Apache mod_rewrite
+  apache2_module: name=rewrite state=present
+  notify:
+    - restart apache2
 
 # MySQL client
 
