--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -9,3 +9,21 @@
       - tree
       - ufw
       - fail2ban
+
+- name: Ditch password SSH authentication
+  lineinfile: dest=/etc/ssh/sshd_config
+              regexp="^PasswordAuthentication"
+              line="PasswordAuthentication no"
+              state=present
+  notify: restart ssh
+
+- name: Disable root SSH access
+  lineinfile: dest=/etc/ssh/sshd_config
+              regexp="^PermitRootLogin"
+              line="PermitRootLogin no"
+              state=present
+  notify: restart ssh
+
+handlers:
+  - name: restart ssh
+    service: name=ssh state=restarted
