--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -2,7 +2,15 @@
 
 # MySQL Server
 - name: Set MySQL debconf root password
-  debconf: name=mysql-server question=mysql-server/root_password value={{ mysql_root_pw }} vtype=password
+  debconf:
+    name: mysql-server
+    question: mysql-server/root_password
+    value: {{ mysql_root_pw }}
+    vtype: password
 
 - name: Confirm MySQL root password
-  debconf: name=mysql-server question=mysql-server/root_password_again value={{ mysql_root_pw }} vtype=password
+  debconf:
+    name: mysql-server
+    question: mysql-server/root_password_again
+    value: {{ mysql_root_pw }}
+    vtype: password
