Blast anonymous MySQL user if present

--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -24,3 +24,10 @@
   with_items:
     - mysql-server
     - mysql-client
+
+- name: Remove anonymous MySQL user
+  mysql_user:
+    user: ""
+    state: absent
+    login_user: root
+    login_password: {{ mysql_root_pw }}
