Fixed syntax error of braced variables

--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -5,19 +5,19 @@
   debconf:
     name: mysql-server
     question: mysql-server/root_password
-    value: {{ mysql_root_pw }}
+    value: "{{ mysql_root_pw }}"
     vtype: password
 
 - name: Confirm MySQL root password
   debconf:
     name: mysql-server
     question: mysql-server/root_password_again
-    value: {{ mysql_root_pw }}
+    value: "{{ mysql_root_pw }}"
     vtype: password
 
 - name: Install MySQL
   apt:
-    package: {{ item }}
+    package: "{{ item }}"
     state: present
     update_cache: yes
     cache_valid_time: 3600
@@ -36,4 +36,4 @@
     user: ""
     state: absent
     login_user: root
-    login_password: {{ mysql_root_pw }}
+    login_password: "{{ mysql_root_pw }}"
