--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Install apt packages
   apt:
-    name: {{ item }}
+    name: "{{ item }}"
     update_cache: yes
     cache_valid_time: 3600
     state: present
