--- a/roles/web/tasks/ufw.yml
+++ b/roles/web/tasks/ufw.yml
@@ -1,1 +1,16 @@
 ---
+
+- name: Lockdown with UFW
+  ufw:
+    state: enabled
+    policy: deny
+    logging: on
+
+- name: UFW - Enable incoming items
+  ufw:
+    rule: allow
+    name: "{{ item }}"
+  with_items:
+    - ssh
+    - http
+    - https
