--- a/roles/web/tasks/php.yml
+++ b/roles/web/tasks/php.yml
@@ -1,1 +1,16 @@
 ---
+
+- name: Install PHP packages
+  apt:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - php5
+    - libapache2-mod-php5
+    - php5mcrypt
+    - php5-curl
+
+- name: Enable PHP5 mcrypt
+  shell: php5enmod mcrypt
+  args:
+    creates: /etc/php5/cli/conf.d/20-mcrypt.ini
