--- a/roles/web/tasks/php.yml
+++ b/roles/web/tasks/php.yml
@@ -9,6 +9,7 @@
     - libapache2-mod-php5
     - php5-mcrypt
     - php5-curl
+    - php-pear
 
 - name: Enable PHP5 mcrypt
   shell: php5enmod mcrypt
