--- a/roles/web/tasks/vanilla.yml
+++ b/roles/web/tasks/vanilla.yml
@@ -11,6 +11,8 @@
     dest: "{{ git_path }}"
     force: yes
 
-- name: Build Vanilla with composer
-  shell: composer install -d {{ git_path }}
-  changed_when: false
+- name: Build Vanilla with Phing
+  shell: phing
+  args:
+    chdir: "{{ git_path }}/build/"
+    creates: vanilla-*.txt
