--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,14 @@
 ---
-- hosts: all
+- hosts: web
+  become: true
+  become_method: sudo
+  remote_user: "vagrant"
+
+  roles:
+    - base
+    - web
+
+- hosts: db
   become: true
   become_method: sudo
   remote_user: "vagrant"
@@ -7,4 +16,3 @@
   roles:
     - base
     - db
-    - web
