Revert change to install location of composer

--- a/roles/web/tasks/php.yml
+++ b/roles/web/tasks/php.yml
@@ -23,6 +23,6 @@
     creates: /usr/bin/phing
 
 - name: Install composer
-  shell: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer
+  shell: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
   args:
-    creates: /usr/bin/composer
+    creates: /usr/local/bin/composer
