--- a/roles/web/tasks/vanilla.yml
+++ b/roles/web/tasks/vanilla.yml
@@ -1,29 +1,29 @@
 ---
 
-- name: Clean Apache test page
-  file:
-    path: "{{ git_path }}/html/"
-    state: absent
-
 - name: Clone git repository
   git:
     repo: "{{ git_repo }}"
     dest: "{{ git_path }}"
     force: yes
 
+- name: Check that Vanilla Forum directory exists
+  file:
+    path: "{{ project_path }}"
+    state: directory
+
+- name: Create logs folder if necessary
+  file:
+    path: "{{ log_path }}"
+    state: directory
+
 - name: Build Vanilla with Phing
   shell: phing
   args:
     chdir: "{{ git_path }}/build/"
-    creates: vanilla-*.zip
-
-- name: Check that Vanilla Forum directory exists
-  file:
-    path: "{{ project_path }}"
-    state: directory    
+    creates: vanilla-*.zip # Need the exact filename output of this sucker
 
 - name: Unpack built archive of Vanilla Forum
   unarchive:
-    src: "{{ git_path }}/build/vanilla-*.zip"
+    src: "{{ git_path }}/build/vanilla-*.zip" # This has to be an exact path, no wildcard
     dest: "{{ project_path }}"
     copy: no
