Set permissions on config template

--- a/roles/web/tasks/vanilla.yml
+++ b/roles/web/tasks/vanilla.yml
@@ -39,6 +39,7 @@
   template:
     src: config.php.j2
     dest: "{{ project_path }}conf/config.php"
+    mode: 0777
 
 - name: Set permissions on Vanilla folders
   file:
