--- a/roles/web/tasks/vanilla.yml
+++ b/roles/web/tasks/vanilla.yml
@@ -38,7 +38,7 @@
 - name: Apply config template
   template:
     src: config.php.j2
-    dest: "{{ project_path }}conf/config.php"
+    dest: "{{ project_path }}/conf/config.php"
     mode: 0777
 
 - name: Transfer ownership of {{ project_path }} to 'www-data'
@@ -52,7 +52,7 @@
 
 - name: Set permissions on Vanilla folders
   file:
-    path: "{{ project_path }}{{ item }}"
+    path: "{{ project_path }}/{{ item }}"
     state: directory
     mode: 0777
   with_items:
