Lock MySQL port to 'web' IP addresses

--- a/roles/db/tasks/ufw.yml
+++ b/roles/db/tasks/ufw.yml
@@ -10,3 +10,6 @@
   ufw:
     rule: allow
     port: "{{mysql_port}}"
+    from_ip: "{{ hostvars[item]['ansible_host'] }}"
+  with_items:
+    - "{{ groups['web'] }}"
