Let's be reasonable here...

--- a/roles/db/tasks/ufw.yml
+++ b/roles/db/tasks/ufw.yml
@@ -6,6 +6,11 @@
     policy: deny
     logging: "on"
 
+- name: Enable SSH
+  ufw:
+    rule: allow
+    port: "22"
+
 - name: Enable MySQL port
   ufw:
     rule: allow
