--- a/roles/db/tasks/vanilladb.yml
+++ b/roles/db/tasks/vanilladb.yml
@@ -7,9 +7,9 @@
     login_user: "root"
     login_password: "{{ mysql_root_pw }}"
 
-- name: Grant access to {{ project_user }}
+- name: Grant access to {{ db_user }}
   mysql_user:
-    name: "{{ project_user }}"
+    name: "{{ db_user }}"
     password: "{{ db_password }}"
     state: present
     priv: "{{ db_name }}.*:ALL"
