--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 inventory = inventories/vagrant
 remote_user = vagrant
+ansible_user = vagrant
 host_key_checking = False
 nocows = 1 
 
