--- a/roles/web/tasks/vanilla.yml
+++ b/roles/web/tasks/vanilla.yml
@@ -45,6 +45,7 @@
   file:
     path: "{{ project_path }}"
     state: directory
+    recurse: yes
     owner: "www-data"
     group: "www-data"
   notify:
