--- a/roles/deploy/tasks/clone.yml
+++ b/roles/deploy/tasks/clone.yml
@@ -5,3 +5,6 @@
     repo: "{{ git_repo }}"
     dest: "{{ git_path }}"
     force: yes
+  register: git_clone_project
+
+- debug: var=git_clone_project
