--- a/roles/deploy/tasks/build.yml
+++ b/roles/deploy/tasks/build.yml
@@ -1,5 +1,15 @@
 ---
 
+- name: Check that Vanilla Forum directory exists
+  file:
+    path: "{{ project_path }}"
+    state: directory
+
+- name: Create logs folder if necessary
+  file:
+    path: "{{ log_path }}"
+    state: directory
+
 - name: Build Vanilla with Phing
   shell: phing
   args:
