Apply config only if it hasn't been updated

--- a/roles/web/tasks/vanilla.yml
+++ b/roles/web/tasks/vanilla.yml
@@ -41,11 +41,17 @@
   args:
     creates: "{{ project_path}}/index.php"
 
+- name: Check if config file is active
+  stat:
+    path: "{{ project_path }}/conf/config.php"
+  register: vanilla_config
+
 - name: Apply config template
   template:
     src: config.php.j2
     dest: "{{ project_path }}/conf/config.php"
     mode: 0777
+  when: vanilla_config.stat.exists == False
 
 - name: Transfer ownership of {{ project_path }} to 'www-data'
   file:
