--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,5 @@
 ---
 
-- include: playbooks/base.yml
-- include: playbooks/web.yml
-- include: playbooks/db.yml
+- include: base.yml
+- include: web.yml
+- include: db.yml
