Stop creation of *.retry files

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,8 @@ inventory = inventories/vagrant
 remote_user = vagrant
 ansible_user = vagrant
 host_key_checking = False
-nocows = 1 
+nocows = 1
+retry_files_enabled = False
 
 [privilege_escalation]
 become = True
