Use 'base_packages' var

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -6,15 +6,7 @@
     update_cache: yes
     cache_valid_time: 3600
     state: present
-  with_items:
-      - git
-      - curl
-      - htop
-      - tree
-      - ufw
-      - fail2ban
-      - python-mysqldb
-      - unzip
+  with_items: "{{ base_packages }}"
 
 - name: Ditch password SSH authentication
   lineinfile:
