--- a/roles/base/tasks/ufw.yml
+++ b/roles/base/tasks/ufw.yml
@@ -9,5 +9,6 @@
 - name: UFW - Enable ports
   ufw:
     rule: "{{ item.rule }}"
+    from: "{{ item.from }}"
     port: "{{ item.port }}"
   with_items: "{{ ufw_ports }}"
