--- a/roles/web/tasks/php.yml
+++ b/roles/web/tasks/php.yml
@@ -4,13 +4,7 @@
   apt:
     name: "{{ item }}"
     state: present
-  with_items:
-    - php5
-    - php5-mysql
-    - libapache2-mod-php5
-    - php5-mcrypt
-    - php5-curl
-    - php-pear
+  with_items: "{{ php_packages }}"
 
 - name: Enable PHP5 mcrypt
   shell: php5enmod mcrypt
