--- a/roles/lb/tasks/main.yml
+++ b/roles/lb/tasks/main.yml
@@ -4,3 +4,9 @@
   apt:
     name: haproxy
     state: present
+
+- name: Copy configuration template
+  template:
+    src: haproxy.cfg.j2
+    dest: /etc/haproxy/haproxy.cfg
+    mode: 0644
