--- a/roles/lb/tasks/main.yml
+++ b/roles/lb/tasks/main.yml
@@ -10,6 +10,7 @@
     src: haproxy.cfg.j2
     dest: /etc/haproxy/haproxy.cfg
     mode: 0644
+  notify: restart haproxy
 
 - name: Start HAProxy service
   service:
